--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Calc do RafaMelis</title>
 </head>
 <body>
-    
+    <div class="Calc">
+        <div class="display">
+            <input type="number" id="valor" /><br>
+            <div class="number">
+                <div class="">
+                    1
+                </div>
+
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
