--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
 </head>
 <body>
     <div class="Calc">
+        
         <div class="display">
-            <input type="number" id="valor" /><br>
+            <input type="text" id="valor" class="vision" /><br>
             <div class="number">
-                <div class="">
-                    1
+                <div class="buttons">
+                    <Button class="button-num">1</Button>
+                    <Button class="button-num">2</Button>
+                    <Button class="button-num">3</Button> </br>
+                    <Button class="button-num">4</Button>
+                    <Button class="button-num">5</Button>
+                    <Button class="button-num">6</Button></br>
+                    <Button class="button-num">7</Button>
+                    <Button class="button-num">8</Button>
+                    <Button class="button-num">9</Button></br>
+                    <Button class="button-num">0</Button>
                 </div>
+                <div>
 
+                </div>
             </div>
         </div>
     </div>
