--- a/index.html
+++ b/index.html
@@ -8,29 +8,46 @@
     <title>Calc do RafaMelis</title>
 </head>
 <body>
-    <div class="Calc">
-        
-        <div class="display">
-            <input type="text" id="valor" class="vision" /><br>
-            <div class="number">
-                <div class="buttons">
-                    <Button class="button-num">1</Button>
-                    <Button class="button-num">2</Button>
-                    <Button class="button-num">3</Button> </br>
-                    <Button class="button-num">4</Button>
-                    <Button class="button-num">5</Button>
-                    <Button class="button-num">6</Button></br>
-                    <Button class="button-num">7</Button>
-                    <Button class="button-num">8</Button>
-                    <Button class="button-num">9</Button></br>
-                    <Button class="button-num">0</Button>
-                </div>
-                <div>
+   <div class="fundo">
+     <h1></h1>
+        <div class="calculadora">
+            <h2>Calculadora</h2></i>
+            <p id="resultado"></p>
+            <table>
+                <tr>
+                    <td> <button class="botao" onclick="clean()">C</button></td>
+                    <td> <button class="botao" onclick="back()"><</button></td>
+                    <td> <button class="botao" onclick="insert('/')">/</button></td>
+                    <td> <button class="botao" onclick="insert('*')">*</button></td>
+                </tr>
 
-                </div>
-            </div>
+                <tr>
+                    <td> <button class="botao" onclick="insert('7')">7</button></td>
+                    <td> <button class="botao" onclick="insert('8')">8</button></td>
+                    <td> <button class="botao" onclick="insert('9')">9</button></td>
+                    <td> <button class="botao" onclick="insert('-')">-</button></td>
+                </tr>
+
+                <tr>
+                    <td> <button class="botao" onclick="insert('4')">4</button></td>
+                    <td> <button class="botao" onclick="insert('5')">5</button></td>
+                    <td> <button class="botao" onclick="insert('6')">6</button></td>
+                    <td> <button class="botao" onclick="insert('+')">+</button></td>
+                </tr>
+
+                <tr>
+                    <td> <button class="botao" onclick="insert('1')">1</button></td>
+                    <td> <button class="botao" onclick="insert('2')">2</button></td>
+                    <td> <button class="botao" onclick="insert('3')">3</button></td>
+                    <td rowspan="2"> <button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
+                </tr>
+                <tr>
+                    <td colspan="2"> <button class="botao" style="width: 106px;" onclick="insert(0)">0</button></td>
+                    <td> <button class="botao" onclick="insert('.')">.</button></td>
+                </tr>
+            </table>
         </div>
-    </div>
-    
+   </div>
+   <script src="script.js"></script>
 </body>
 </html>
